--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "shop-sizzle-new",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.9.0",
