--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shop-sizzle-new",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
