--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.182.0",
+    "three-globe": "^2.45.0",
     "typewriter-effect": "^2.22.0",
     "zustand": "^5.0.10"
   },
